# adb-tui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
adb_tui/: __init__.py  __main__.py  adb.py  app.py  app.tcss
scripts/: make_screenshots.py
